--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>drink Water</title>
+    <title>Drink Water</title>
 </head>
 <body>
     <h1>Drink Water</h1>
@@ -13,18 +13,18 @@
 
     <div class="cup">
     <div class="remained" id="remained">
-        <span class="liters">1.5L</span>
+        <span class="liters"></span>
         <small>Remained</small>
     </div>
 
-    <div class="percentage" id="percentage">20%</div>
+    <div class="percentage" id="percentage"></div>
     </div>
 
     <p class="text">Select how many glasses of water that you have drank</p>
 
     <div class="cups">
-        <div class="cup small-cup full">250 ml</div>
-        <div class="cup small-cup full">250 ml</div>
+        <div class="cup small-cup">250 ml</div>
+        <div class="cup small-cup">250 ml</div>
         <div class="cup small-cup">250 ml</div>
         <div class="cup small-cup">250 ml</div>
         <div class="cup small-cup">250 ml</div>
