--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="cup">
     <div class="remained" id="remained">
-        <span class="liters"></span>
+        <span id="liters"></span>
         <small>Remained</small>
     </div>
 
